config/ip6tables.conf
# System Management Daemon - Spaceport
# iDigitalFlame 2018
#
# IP6Tables Configuration.

*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT DROP [0:0]
:BASE - [0:0]
-A INPUT -j BASE
-A OUTPUT -j BASE
-A BASE -i lo -j ACCEPT
-A BASE -s ::1/128 -d ::1/128 -j ACCEPT
-A BASE -m state --state INVALID -j DROP
-A BASE -p tcp -m state --state RELATED,ESTABLISHED -j ACCEPT
-A BASE -p udp -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p ipv6-icmp -m icmp6 --icmpv6-type 1 -j ACCEPT
-A INPUT -p ipv6-icmp -m icmp6 --icmpv6-type 2 -j ACCEPT
-A INPUT -p ipv6-icmp -m icmp6 --icmpv6-type 3 -j ACCEPT
-A INPUT -p ipv6-icmp -m icmp6 --icmpv6-type 4 -j ACCEPT
-A BASE -p ipv6-icmp -m icmp6 --icmpv6-type 135 -j ACCEPT
-A BASE -p ipv6-icmp -m icmp6 --icmpv6-type 136 -j ACCEPT
-A INPUT -p ipv6-icmp -m icmp6 --icmpv6-type 133 -j ACCEPT
-A INPUT -p ipv6-icmp -m icmp6 --icmpv6-type 134 -j ACCEPT
-A INPUT -s fe80::/10 -p ipv6-icmp -m icmp6 --icmpv6-type 130 -j ACCEPT
-A INPUT -s fe80::/10 -p ipv6-icmp -m icmp6 --icmpv6-type 131 -j ACCEPT
-A INPUT -s fe80::/10 -p ipv6-icmp -m icmp6 --icmpv6-type 132 -j ACCEPT
-A INPUT -s fe80::/10 -p ipv6-icmp -m icmp6 --icmpv6-type 143 -j ACCEPT
-A INPUT -s fe80::/10 -p ipv6-icmp -m icmp6 --icmpv6-type 151 -j ACCEPT
-A INPUT -s fe80::/10 -p ipv6-icmp -m icmp6 --icmpv6-type 152 -j ACCEPT
-A INPUT -s fe80::/10 -p ipv6-icmp -m icmp6 --icmpv6-type 153 -j ACCEPT
-A INPUT -p ipv6-icmp -m icmp6 --icmpv6-type 129 -m limit --limit 1/sec -j ACCEPT
-A OUTPUT -m owner --gid-owner root -p ipv6-icmp --icmpv6-type 128 -m limit --limit 1/sec -j ACCEPT
-A OUTPUT -m owner --gid-owner iptables-ping -p ipv6-icmp --icmpv6-type 128 -m limit --limit 1/sec -j ACCEPT
-A OUTPUT -m tcp -p tcp --dport 445 -j ACCEPT
-A OUTPUT -m owner --gid-owner iptables-hacker -p tcp -j ACCEPT
-A OUTPUT -m owner --gid-owner iptables-hacker -p udp -j ACCEPT
-A OUTPUT -m owner --gid-owner root -p tcp --dport 80 -j ACCEPT
-A OUTPUT -m owner --gid-owner root -p udp --dport 80 -j ACCEPT
-A OUTPUT -m owner --gid-owner root -p tcp --dport 443 -j ACCEPT
-A OUTPUT -m owner --gid-owner root -p udp --dport 443 -j ACCEPT
-A OUTPUT -m owner --gid-owner root -p tcp --dport 4443 -j ACCEPT
-A OUTPUT -m owner --gid-owner root -p tcp --dport 11371 -j ACCEPT
-A OUTPUT -m owner --uid-owner chrony -p udp --dport 123 -j ACCEPT
-A OUTPUT -m owner --gid-owner chrony -p udp --dport 123 -j ACCEPT
-A OUTPUT -m owner --gid-owner root -p udp --dport 546:547 -j ACCEPT
-A OUTPUT -m owner --gid-owner nm-openvpn -p tcp --dport 80 -j ACCEPT
-A OUTPUT -m owner --gid-owner nm-openvpn -p udp --dport 80 -j ACCEPT
-A OUTPUT -m owner --gid-owner nm-openvpn -p tcp --dport 443 -j ACCEPT
-A OUTPUT -m owner --gid-owner nm-openvpn -p udp --dport 443 -j ACCEPT
-A OUTPUT -m owner --gid-owner nm-openvpn -p tcp --dport 4443 -j ACCEPT
-A OUTPUT -m owner --gid-owner iptables-ssh -p tcp --dport 22 -j ACCEPT
-A OUTPUT -m owner --gid-owner iptables-ftp -p tcp --dport 20 -j ACCEPT
-A OUTPUT -m owner --gid-owner iptables-ftp -p tcp --dport 21 -j ACCEPT
-A OUTPUT -m owner --gid-owner iptables-ftp -p tcp --dport 22 -j ACCEPT
-A OUTPUT -m owner --gid-owner iptables-vpn -p tcp --dport 80 -j ACCEPT
-A OUTPUT -m owner --gid-owner iptables-vpn -p udp --dport 80 -j ACCEPT
-A OUTPUT -m owner --gid-owner iptables-vpn -p tcp --dport 443 -j ACCEPT
-A OUTPUT -m owner --gid-owner iptables-vpn -p udp --dport 443 -j ACCEPT
-A OUTPUT -m owner --gid-owner iptables-vpn -p tcp --dport 4443 -j ACCEPT
-A OUTPUT -m owner --gid-owner iptables-chat -p tcp --dport 443 -j ACCEPT
-A OUTPUT -m owner --gid-owner iptables-web -p tcp --dport 80 -j ACCEPT
-A OUTPUT -m owner --gid-owner iptables-web -p udp --dport 80 -j ACCEPT
-A OUTPUT -m owner --gid-owner iptables-web -p tcp --dport 443 -j ACCEPT
-A OUTPUT -m owner --gid-owner iptables-web -p udp --dport 443 -j ACCEPT
-A OUTPUT -m owner --gid-owner iptables-mail -p tcp --dport 443 -j ACCEPT
-A OUTPUT -m owner --gid-owner iptables-mail -p tcp --dport 587 -j ACCEPT
-A OUTPUT -m owner --gid-owner iptables-mail -p tcp --dport 993 -j ACCEPT
-A OUTPUT -m owner --uid-owner dnsmasq -p tcp --dport 53 -j ACCEPT
-A OUTPUT -m owner --uid-owner dnsmasq -p udp --dport 53 -j ACCEPT
-A OUTPUT -m owner --gid-owner systemd-resolve -p tcp --dport 53 -j ACCEPT
-A OUTPUT -m owner --gid-owner systemd-resolve -p udp --dport 53 -j ACCEPT
-A OUTPUT -m owner --gid-owner iptables-remote -p tcp --dport 3389 -j ACCEPT
-A OUTPUT -m owner --gid-owner iptables-remote -p tcp --dport 5900:5910 -j ACCEPT
-A OUTPUT -m owner --gid-owner iptables-database -p tcp --dport 1433 -j ACCEPT
-A OUTPUT -m owner --gid-owner iptables-database -p tcp --dport 3306 -j ACCEPT
COMMIT
