config/iptables.conf
# System Management Daemon - Spaceport
# iDigitalFlame 2018
#
# IP4Tables Configuration.

*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING ! -o vmi+ -j MASQUERADE
-A POSTROUTING -o vmi0 -j MASQUERADE
COMMIT
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT DROP [0:0]
:BASE - [0:0]
-A INPUT -j BASE
-A OUTPUT -j BASE
-A BASE -i lo -j ACCEPT
-A BASE -i vmi0 -j ACCEPT
-A BASE -s 127.0.0.1/32 -d 127.0.0.1/32 -j ACCEPT
-A BASE -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A BASE -p icmp -m icmp --icmp-type 3/1 -j ACCEPT
-A BASE -p icmp -m icmp --icmp-type 3/3 -j ACCEPT
-A BASE -m icmp -p icmp --icmp-type 8 -m limit --limit 1/sec -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 0 -m limit --limit 1/sec -j ACCEPT
-A OUTPUT -m owner --gid-owner root -p icmp --icmp-type 8 -m limit --limit 1/sec -j ACCEPT
-A OUTPUT -p icmp -m icmp --icmp-type 0 -m limit --limit 1/sec -d 172.16.172.0/26 -j ACCEPT
-A OUTPUT -m owner --gid-owner iptables-ping -p icmp --icmp-type 8 -m limit --limit 1/sec -j ACCEPT
-A BASE -f -j DROP
-A BASE -d 0.0.0.0/32 -j DROP
-A BASE -s 224.0.0.0/8 -j DROP
-A BASE -d 224.0.0.0/8 -j DROP
-A BASE -d 255.255.255.255/32 -j DROP
-A BASE -s 255.255.255.255/32 -j DROP
-A BASE -m state --state INVALID -j DROP
-A BASE -f -m limit --limit 10/min -j ACCEPT
-A BASE -m addrtype --dst-type ANYCAST -j DROP
-A BASE -m addrtype --dst-type BROADCAST -j DROP
-A BASE -m addrtype --dst-type MULTICAST -j DROP
-A BASE -p tcp -m state --state RELATED,ESTABLISHED -j ACCEPT
-A BASE -p udp -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -m tcp -p tcp --dport 445 -j ACCEPT
-A OUTPUT -m owner --gid-owner iptables-hacker -p tcp -j ACCEPT
-A OUTPUT -m owner --gid-owner iptables-hacker -p udp -j ACCEPT
-A OUTPUT -m owner --gid-owner root -p tcp --dport 80 -j ACCEPT
-A OUTPUT -m owner --gid-owner root -p udp --dport 80 -j ACCEPT
-A OUTPUT -m owner --gid-owner root -p tcp --dport 443 -j ACCEPT
-A OUTPUT -m owner --gid-owner root -p udp --dport 443 -j ACCEPT
-A OUTPUT -m owner --gid-owner root -p tcp --dport 4443 -j ACCEPT
-A OUTPUT -m owner --gid-owner root -p tcp --dport 11371 -j ACCEPT
-A OUTPUT -m owner --uid-owner chrony -p udp --dport 123 -j ACCEPT
-A OUTPUT -m owner --gid-owner chrony -p udp --dport 123 -j ACCEPT
-A OUTPUT -m owner --gid-owner root -p udp --dport 67:68 -j ACCEPT
-A OUTPUT -m owner --gid-owner nm-openvpn -p tcp --dport 80 -j ACCEPT
-A OUTPUT -m owner --gid-owner nm-openvpn -p udp --dport 80 -j ACCEPT
-A OUTPUT -m owner --gid-owner nm-openvpn -p tcp --dport 443 -j ACCEPT
-A OUTPUT -m owner --gid-owner nm-openvpn -p udp --dport 443 -j ACCEPT
-A OUTPUT -m owner --gid-owner nm-openvpn -p tcp --dport 4443 -j ACCEPT
-A OUTPUT -m owner --gid-owner iptables-ssh -p tcp --dport 22 -j ACCEPT
-A OUTPUT -m owner --gid-owner iptables-ftp -p tcp --dport 20 -j ACCEPT
-A OUTPUT -m owner --gid-owner iptables-ftp -p tcp --dport 21 -j ACCEPT
-A OUTPUT -m owner --gid-owner iptables-ftp -p tcp --dport 22 -j ACCEPT
-A OUTPUT -m owner --gid-owner iptables-vpn -p tcp --dport 80 -j ACCEPT
-A OUTPUT -m owner --gid-owner iptables-vpn -p udp --dport 80 -j ACCEPT
-A OUTPUT -m owner --gid-owner iptables-vpn -p tcp --dport 443 -j ACCEPT
-A OUTPUT -m owner --gid-owner iptables-vpn -p udp --dport 443 -j ACCEPT
-A OUTPUT -m owner --gid-owner iptables-vpn -p tcp --dport 4443 -j ACCEPT
-A OUTPUT -m owner --gid-owner iptables-chat -p tcp --dport 443 -j ACCEPT
-A OUTPUT -m owner --gid-owner iptables-web -p tcp --dport 80 -j ACCEPT
-A OUTPUT -m owner --gid-owner iptables-web -p udp --dport 80 -j ACCEPT
-A OUTPUT -m owner --gid-owner iptables-web -p tcp --dport 443 -j ACCEPT
-A OUTPUT -m owner --gid-owner iptables-web -p udp --dport 443 -j ACCEPT
-A OUTPUT -m owner --gid-owner iptables-web -p tcp --dport 8006 -j ACCEPT
-A OUTPUT -m owner --gid-owner iptables-web -p tcp --dport 8010 -j ACCEPT
-A OUTPUT -m owner --gid-owner iptables-mail -p tcp --dport 443 -j ACCEPT
-A OUTPUT -m owner --gid-owner iptables-mail -p tcp --dport 587 -j ACCEPT
-A OUTPUT -m owner --gid-owner iptables-mail -p tcp --dport 993 -j ACCEPT
-A OUTPUT -m owner --uid-owner kvm -p tcp --dport 53 -j ACCEPT
-A OUTPUT -m owner --uid-owner kvm -p udp --dport 53 -j ACCEPT
-A OUTPUT -m owner --gid-owner systemd-resolve -p tcp --dport 53 -j ACCEPT
-A OUTPUT -m owner --gid-owner systemd-resolve -p udp --dport 53 -j ACCEPT
-A OUTPUT -m owner --gid-owner iptables-remote -p tcp --dport 3389 -j ACCEPT
-A OUTPUT -m owner --gid-owner iptables-remote -p tcp --dport 5900:5910 -j ACCEPT
-A OUTPUT -m owner --gid-owner iptables-database -p tcp --dport 1433 -j ACCEPT
-A OUTPUT -m owner --gid-owner iptables-database -p tcp --dport 3306 -j ACCEPT
-A INPUT -p tcp -m tcp -d 172.16.172.1/32 -s 172.16.172.0/26 --dport 445 -j ACCEPT
COMMIT
